tests/parsing/smtlib/v2.6/errors/065-declare-fun_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/065-declare-fun_unclosed_1.smt2", line 2, character 24-25:
2 | (declare-fun foo () bar _)
                            ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a closing parenthesis.
